# rustc-codegen-spir

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
src/: abi.rs  attr.rs  builder_spirv.rs  custom_decorations.rs  custom_insts.rs  lib.rs  link.rs  spirv_type.rs  spirv_type_constraints.rs  symbols.rs  target.rs
src/builder/: builder_methods.rs  byte_addressable_buffer.rs  ext_inst.rs  intrinsics.rs  libm_intrinsics.rs  mod.rs  spirv_asm.rs
src/codegen_cx/: constant.rs  declare.rs  entry.rs  mod.rs  type_.rs
src/linker/: dce.rs  destructure_composites.rs  duplicates.rs  entry_interface.rs  import_export_link.rs  inline.rs  ipo.rs  mem2reg.rs  mod.rs  param_weakening.rs  peephole_opts.rs  simple_passes.rs  specializer.rs  test.rs  zombies.rs
src/linker/spirt_passes/: controlflow.rs  debuginfo.rs  diagnostics.rs  fuse_selects.rs  mod.rs  reduce.rs
src/rustc_codegen_spirv_types/: compile_result.rs  mod.rs
tests/: README.md  test-shader.rs  test.ps1
tests/test-shader/: Cargo.toml
tests/test-shader/.cargo/: config.toml
tests/test-shader/src/: lib.rs
