[package]
name = "rustc_codegen_spir"
description = "A compiler plugin for Rust that generates SPIR-V code"
license = "MIT"
version = "0.0.0"
edition = "2021"

[dependencies]

[package.metadata.rust-analyzer]
rustc_private = true

[lib]
name = "rustc_codegen_spir"
# Ref: https://doc.rust-lang.org/beta/unstable-book/compiler-flags/codegen-backend.html
crate-type = ["dylib"]
