[package]
name = "rustc_codegen_spir"
description = "A compiler plugin for Rust that generates SPIR-V code"
license = "MIT"
version = "0.0.0"
edition = "2021"

[dependencies]
# Normal dependencies.
termcolor = "1.2"
ar = "0.9.0"
either = "1.8.0"
indexmap = "1.6.0"
rspirv = "0.11"
rustc-demangle = "0.1.21"
sanitize-filename = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.6.1", features = ["union"] }
spirt = "0.3.0"
spirv-tools = { version = "0.10", default-features = false, features = ["use-compiled-tools"] }
lazy_static = "1.4.0"
itertools = "0.10.5"
num-traits = "*"

[dev-dependencies]
pipe = "0.4"
pretty_assertions = "1.0"
tempfile = "3.4"

[package.metadata.rust-analyzer]
# #![feature(rustc_private)]
# for vscode setting {"rust-analyzer.rustc.source": "discover",}
rustc_private = true

[lib]
name = "rustc_codegen_spir"
# Ref: https://doc.rust-lang.org/beta/unstable-book/compiler-flags/codegen-backend.html
crate-type = ["dylib"]
